--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
     <div class='o-grid__col o-grid__col--full'>
 
       <ul class='o-plain-list c-social-nav u-text-center'>
-        <li class='c-social-nav__item'>
+<!--         <li class='c-social-nav__item'>
           <a href='{{ site.twitter }}' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-sc-twitter' data-size='s'></span>
           </a>
-        </li>
+        </li> -->
         <li class='c-social-nav__item'>
           <a href='{{ site.facebook }}' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-sc-facebook' data-size='s'></span>
@@ -18,11 +18,11 @@
             <span class='c-social-nav__icon' data-icon='ei-sc-instagram' data-size='s'></span>
           </a>
         </li>
-        <li class='c-social-nav__item'>
+<!--         <li class='c-social-nav__item'>
           <a href='{{ site.github }}' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-sc-github' data-size='s'></span>
           </a>
-        </li>
+        </li> -->
         <li class='c-social-nav__item'>
           <a href='mailto:{{ site.email }}' target='_blank'>
             <span class='c-social-nav__icon' data-icon='ei-envelope' data-size='s'></span>
