--- a/_sass/settings/_colors.scss
+++ b/_sass/settings/_colors.scss
@@ -3,7 +3,7 @@
 // *----------------------------------*/
 
 // Colors
-$color-brand: #00A0FF;
+$color-brand: #AD0562;
 $color-white: #FFFFFF;
 $color-text:  #323232;
 $color-gray:  #2B5F72;
