--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,13 @@
 <!--             <label class='js-off-canvas-toggle c-off-canvas-toggle' aria-label='Toggle navigation'>
               <span class='c-off-canvas-toggle__icon'></span>
             </label> -->
+            <ul class='o-plain-list c-social-nav u-text-right'>
+              <li class='c-social-nav__item'>
+                <a href='{{ site.instagram }}' target='_blank'>
+                  <span class='c-social-nav__icon' data-icon='ei-sc-instagram' data-size='m'></span>
+                </a>
+              </li>
+            </ul>
           </div>
 
           <div class='o-grid__col o-grid__col--1-4-s'>
